k8s/blob-gateway/01-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-blob-gateway-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/blobs/query
      - /api/blobs/mutation
      - /api/blobs
