k8s/blob-gateway/02-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blob-gateway-service
  namespace: kube-system
spec:
  serviceName: blob-gateway-service
  replicas: ${REPLICAS}
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: blob-gateway-service
  template:
    metadata:
      labels:
        app: blob-gateway-service
    spec:
      # topologySpreadConstraints:
      # - maxSkew: 1
      #   topologyKey: kubernetes.io/hostname
      #   whenUnsatisfiable: ScheduleAnyway
      #   labelSelector:
      #     matchLabels:
      #       app: blob-gateway-service
      restartPolicy: Always
      containers:
      - name: blob-gateway-service
        image: npool/linera-respeer:latest
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "./wallet-entrypoint.sh"]
        volumeMounts:
        - name: blob-gateway-pvc
          mountPath: /wallet
        - name: shared-app-data
          mountPath: /shared-app-data
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "150m"
            memory: "300Mi"
      volumes:
      - name: shared-app-data
        persistentVolumeClaim:
          claimName: shared-app-data
  volumeClaimTemplates:
    - metadata:
        name: blob-gateway-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi

---
apiVersion: v1
kind: Service
metadata:
  name: blob-gateway-service
  namespace: kube-system
spec:
  ports:
    - name: blob-gateway-service
      port: 8080
      targetPort: 8080
  selector:
    app: blob-gateway-service
